<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/Widget.Material3.AppBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            style="@style/ActionBar"
            app:logo="@drawable/github_logo_white"
            app:menu="@menu/main_menu"
            app:title="@string/github_search_user"
            app:titleMarginStart="24dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_user_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users_not_found"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_user"
        app:layout_constraintEnd_toEndOf="@+id/rv_user"
        app:layout_constraintStart_toStartOf="@+id/rv_user"
        app:layout_constraintTop_toTopOf="@+id/rv_user" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/searchbar_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/searchbar_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/searchBar"
        app:layout_constraintStart_toStartOf="@+id/searchBar"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rv_user"
        app:layout_constraintEnd_toEndOf="@+id/rv_user"
        app:layout_constraintStart_toStartOf="@+id/rv_user"
        app:layout_constraintTop_toTopOf="@+id/rv_user" />

</androidx.constraintlayout.widget.ConstraintLayout>